feat: implement GET /v1/customers/reactivate/{id:[0-9]+} endpoint and added documentation
