# src/Controller/CustomersController.php
@@ -293,6 +293,60 @@ final class CustomersController extends A_Controller
         return $response->withStatus(404)->withHeader('Content-Type', 'application/json');
     }
 
+    /**
+     * @OA\Get(
+     *     path="/v1/customers/reactivate/{id}",
+     *     tags={"Customers"},
+     *     summary="Reactivate a Customer",
+     *     operationId="reactivateCustomer",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the Customer to reactivate",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Customer Reactivated",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Customer Reactivated")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Customer Not Found",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Customer Not Found")
+     *         )
+     *     )
+     * )
+     *
+     * @param Request $request
+     * @param Response $response
+     * @param $args
+     * @return Response
+     */
+    public function reactivateAction(Request $request, Response $response, $args): Response
+    {
+        $id = $args['id'];
 
-    
+        $customer = $this->customersRepository->findById($id);
+
+        if (!$customer) {
+            $this->logger->info('Customer Not Found.', ['statusCode' => 404]);
+            $response->getBody()->write(json_encode(['message' => 'Customer Not Found']));
+            return $response->withStatus(404)->withHeader('Content-Type', 'application/json');
+        }
+
+        $customer->setIsActive(true);
+        $this->customersRepository->update($customer);
+
+        $this->logger->info('Customer Reactivated.', ['statusCode' => 200]);
+        $response->getBody()->write(json_encode(['message' => 'Customer Reactivated']));
+        return $response->withStatus(404)->withHeader('Content-Type', 'application/json');
+    }
+
+
+   
 }
